# Jogy-backend

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_social_graph_messaging.py  003_make_post_expire_at_index_partial.py  004_notifications.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  comment_likes.py  comments.py  conversations.py  favorites.py  follows.py  history.py  likes.py  location.py  notifications.py  posts.py  qr.py  search.py  uploads.py  users.py  ws.py
app/core/: __init__.py  config.py  database.py  exceptions.py  middleware.py  redis.py  security.py
app/models/: __init__.py  base.py  browsing_history.py  comment.py  comment_like.py  conversation.py  conversation_member.py  follow.py  like.py  message.py  message_attachment.py  notification.py  post.py  post_favorite.py  user.py
app/schemas/: __init__.py  auth.py  base.py  chat.py  comment.py  favorite.py  follow.py  history.py  like.py  location.py  notification.py  post.py  qr.py  search.py  user.py
app/services/: __init__.py  auth.py  cleanup.py  comment.py  discover.py  email.py  location.py  notification.py  storage.py  ws_manager.py
nginx/: nginx.conf
tests/: conftest.py  test_security.py
tests/integration/: test_api.py  test_notifications.py
